	- fixed row inserting (after). Previous cursor position didn't disapear (regression)
	+ SetImage() works for row now

	after 711-dev1

	- fixed Remove0 - it didn't clear cursor position if cnt > 1
	- fixed Searching - now the searching flag is respected in immediate searching
	+ AddSeparator(Color c) - inserts 3 pixel height separator
	* IsEnd restores rowidx now - it's now more safe to use FOREACH* macros
	- fixed elipsses in multiline texts
	- fixed Searching() one more time
	- some fixes to sorting
	+ added Skip to ItemRect. If true the given row/col is skipped during Find()
	+ fixed some regressions with painting header
	+ added WhenCursor callback and CancelCursor() to cancel changing cursor position from body
	  of this callback.

	after 711-dev2

	do not remember :)

	after 712-dev1

	* made find string control vista compatabile, removed unecessary members
	- fixed coping/paste and WhenInsertRow/WhenUpdateRow issues (wrong rowidx, one callback call
	  for multiple rows)
	+ added German translation
	* WhenEditRow removed - added WhenStartEdit
	* WhenAcceptRow is always called now - no metter if any cell in row changed its value or not,
	  WhenAcceptedRow is called only if there was chanage in a row

	after 2008.1beta

	- commented out DragAndDrop. It caused crashes
	* IsNewRowOrder() renamed to IsOrderChanged()
	+ IsDataChanged() - returns true if data in grid were edited
	+ Crlc-C creates now 2 clipboards - one internal and one textual
	+ AskRemove() - if set question is shown before deleting a row
	+ editing of row was possible (through double click) even if editing flag was not set
	- Clear refreshes toolbar now
	+ added Get*Align() to ItemRect

	after 2008.1beta2

	- hiding/showing columns works again in proportional mode (R)
	- align value from AttrText was inproperly passed to cell style
	+ added Header(bool) - to turn on/off the header
	- some fixes to Ready()
	+ added RowChanging(bool) - false -> changing row is not possible